<resources>
    <string name="app_name">Note Invaders</string>
    <string name="start">Start</string>
    <string name="title_activity_instrument">Instrument Selection</string>
    <string name="action_settings">Settings</string>
    <string name="choose_instrument">Choose your instrument</string>
    <string name="instrument">Instrument</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="input">Select Input</string>
    <string name="choose_input">Choose how to listen</string>
    <string name="config_microphone">Configure Microphone Range</string>
    <string name="config_usb">Configure USB</string>
    <string name="config_microphone_step1">1: Play a nice smooth middle note</string>
    <string name="config_microphone_step2">2: Descend to the lowest note you can play</string>
    <string name="config_microphone_step3">3: Ascend to the highest note you can play</string>
    <string name="microphone">Microphone</string>
    <string name="usb_midi">USB MIDI</string>
    <string name="bt_midi">BT MIDI</string>
    <string name="microphone_no_permission">Cannot use microphone without permission</string>
    <string name="note_invaders">Note Invaders</string>
    <string name="note_invaders_subtitle">Choose your mission</string>
    <string name="random_attack">Random Attack</string>
    <string name="piano_keyboard">Piano / Keyboard</string>
    <string name="violin">Violin</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="tempo">Tempo</string>
    <string name="bpm">bpm</string>
    <string name="allow">Allow</string>
    <string name="menu_instrument">Instrument</string>
    <string name="menu_microphone">Setup Microphone</string>
    <string name="menu_usb">Setup USB</string>
    <string name="menu_bt">Setup BLE</string>
    <string name="current_score">Current Score</string>
    <string name="missed_notes">Missed notes</string>
    <string name="missed_note_frequency">Frequency of missed and incorrect notes</string>
    <string name="false_fires">Incorrect tries</string>
    <string name="maximum_tempo">Top tempo</string>
    <string name="help">Help</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="show_note_names">Show note names</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="second_postfix">s</string>
    <string name="game_over">Game Over</string>
    <string name="never">Never</string>
    <string name="dialog_reset_title">Reset score</string>
    <string name="dialog_reset_contents">Changing difficulty will reset the score, do you want to accept the changes?</string>
    <string name="dialog_reset_start_new">Start new</string>
    <string name="dialog_reset_continue_old">Continue</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="no_device">No device detected</string>
    <string name="no_midi_available">Sorry, your phone does not support MIDI</string>
    <string name="scan_usb">Scan...</string>
    <string name="midi_connect_help">Try to scan for USB in your phone\'s device connection settings...</string>
    <string name="connect_usb">Connect instrument via\nUSB-OTG adapter:</string>
    <string name="no_ble_available">Sorry Bluetooth Low Energy is not available on your phone</string>
    <string name="midi_ble_connect_help">Try turning on BT and scanning again...</string>
    <string name="config_ble">Configure BT-LE</string>
    <string name="connect_ble">Connect instrument via Bluetooth LE:</string>
    <string name="scan_bt">Scan for devices...</string>
    <string name="scan_bt_stop">Stop...</string>
    <string name="menu_attributions">Attributions</string>
    <string name="title_activity_attributions">Attributions</string>
    <string name="play_next">Play Next</string>
    <string name="play_again">Play Again</string>

</resources>
