<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_instrument"
        android:title="@string/menu_instrument" />
    <item
        android:id="@+id/menu_item_setupmicrophone"
        android:icon="@drawable/ic_baseline_mic_24px"
        android:title="@string/menu_microphone" />
    <item
        android:id="@+id/menu_item_setupusb"
        android:icon="@drawable/ic_baseline_usb_24px"
        android:title="@string/menu_usb" />
    <item
        android:id="@+id/menu_item_setupbt"
        android:icon="@drawable/ic_baseline_bluetooth_24px"
        android:title="@string/menu_bt" />
    <item
        android:id="@+id/menu_item_attributions"
        android:icon="@drawable/ic_baseline_copyright_24px"
        android:title="@string/menu_attributions" />
</menu>