<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MicrophoneSetupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/score"
                android:contentDescription="@string/current_score" />

            <LinearLayout
                android:id="@+id/score_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_score"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="180"
                    android:textSize="24sp" />
            </LinearLayout>

            <view
                android:id="@+id/score_view"
                class="uk.co.darkerwaters.noteinvaders.views.ScoreActiveView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toStartOf="@+id/false_fires_number"
                app:layout_constraintStart_toEndOf="@+id/missed_notes_number"
                app:layout_constraintTop_toBottomOf="@+id/score_layout" />

            <TextView
                android:id="@+id/missed_notes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/missed_notes"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/score_view"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/false_fires_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/false_fires"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/score_view"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/missed_notes_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="9"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/missed_notes_label"
                app:layout_constraintTop_toTopOf="@+id/missed_notes_label" />

            <TextView
                android:id="@+id/false_fires_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="9"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/false_fires_label"
                app:layout_constraintTop_toTopOf="@+id/false_fires_label" />

            <LinearLayout
                android:id="@+id/bpm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/score_view">

                <TextView
                    android:id="@+id/top_bpm_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maximum_tempo"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/top_bpm_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="60"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/top_bpm_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bpm"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/help_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/bpm_layout">

                <TextView
                    android:id="@+id/help_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/help_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/off"
                    android:textSize="18sp" />

            </LinearLayout>

            <view
                class="uk.co.darkerwaters.noteinvaders.views.NotesGraphView"
                android:id="@+id/notes_graph_view"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/help_layout" />

            <TextView
                android:id="@+id/missed_notes_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/missed_note_frequency"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/notes_graph_view"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/missed_notes_label2">

                <Button
                    android:id="@+id/button_play_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/play_next" />

                <Button
                    android:id="@+id/button_play_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/play_again" />
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</LinearLayout>